tests/should_fail/undefined_region.sm
initial foo
final bar

foo -- move unknown_region --> bar

foo --
  winc "foo"
--> pre
